# Fairy

./: .coverage  .env  .env.example  .env.mcp.example  .gitignore  CLEANUP_SUMMARY.md  CONTEXT_SYNCHRONIZATION_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_README.md  Dockerfile  Dockerfile.git  Dockerfile.mcp  LICENSE  MANIFEST.in  MCP_SERVER_IMPLEMENTATION_SUMMARY.md  PERSONAL_ASSISTANT_TEST_SUMMARY.md  PRIVACY_SECURITY_ENHANCEMENTS.md  QUICK_REFERENCE.md  README.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  USAGE_GUIDE.md  docker-compose.mcp.yml  docker-compose.yml  encryption.key  final_validation.py  health_check.py  license-config.json  package.json  performance_optimization_demo.py  pyproject.toml  requirements.txt  run_integration_tests.py  run_personal_assistant_tests.py  start_assistant.py  start_with_lm_studio.py  test_enhanced_redis_backend.py  test_integration_hub_simple.py  test_project_functionality.py  (+4 more)
.kiro/: task_tracking.json
agents/: agent_registry.json  ai_assistant_agent.py  self_improvement_agent.py
app/: accessibility_manager.py  agent_context_synchronizer.py  agent_integration.py  agent_mcp_router.py  agent_registry.py  ai_assistant_service.py  code_analyzer.py  code_modifier.py  config.py  config_manager.py  context_notification_system.py  context_synchronizer.py  conversation_manager.py  conversation_memory.py  file_content_analyzer.py  file_organization_manager.py  file_system_manager.py  git_config.py  git_error_handler.py  git_history_analytics.py  git_workflow_automation_service.py  git_workflow_integration.py  git_workflow_manager.py  git_workflow_monitor.py  health_endpoints.py  improvement_engine.py  integration_hub.py  interaction_mode_manager.py  learning_engine.py  llm_studio_client.py  main.py  mcp_client.py  mcp_config.py  mcp_error_handler.py  mcp_integration.py  mcp_message_handler.py  mcp_models.py  mcp_monitoring_system.py  mcp_performance_integration.py  mcp_performance_optimizer.py  (+29 more)
docs/: git_workflow_automation.md
examples/: basic_usage.py  context_synchronization_demo.py  git_workflow_automation_demo.py  mcp_server_demo.py
obsidian-notes/: README.md  architecture-overview.md  educational-assessment.md  project-overview.md  requirements-map.md  task-progress.md
scripts/: backup_service.py  complete_task.py  deploy.sh  maintenance.py  validate_config.py
tests/: README_INTEGRATION_TESTS.md  README_MCP_GIT_INTEGRATION_TESTS.md  test_agent_mcp_integration.py  test_agent_registry_integration.py  (+47 more)
(+30 files in other folders)
